hphp/hack/test/typecheck/generics_restrictions/contravariance_inout.php.exp
File "contravariance_inout.php", line 6, characters 29-29:
Illegal usage of a contravariant type parameter (Typing[4121])
File "contravariance_inout.php", line 4, characters 10-10:
This is where the parameter was declared as contravariant (-)
File "contravariance_inout.php", line 6, characters 29-29:
Inout/ref function parameters are both covariant and contravariant
